Style fixes for Dark Mode

--- a/src/components/SettingsModal.scss
+++ b/src/components/SettingsModal.scss
@@ -7,5 +7,9 @@
       background-color: #1b1c1d;
       color: #ffffff;
     }
+
+    .close.icon {
+      color: #ffffff;
+    }
   }
 }
