--- a/src/components/SolutionModal.scss
+++ b/src/components/SolutionModal.scss
@@ -11,5 +11,9 @@
       background-color: #1b1c1d;
       color: #ffffff;
     }
+
+    .close.icon {
+      color: #ffffff;
+    }
   }
 }
